--- a/style.css
+++ b/style.css
@@ -149,6 +149,7 @@ header {
   display: grid;
   margin: auto;
   grid-template-columns: auto auto auto;
+  gap: 10px;
   justify-content: center;
   align-items: center;
 }
@@ -157,7 +158,6 @@ header {
   width: 350px;
   height: 350px;
   background-color: #EFD400;
-  margin: 5px;
   overflow: hidden;
   border-radius: 5px;
   box-shadow: 0 0 8px #000000aa;
