--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ header img {
   text-align: center;
   font-size: 40px;
   margin-bottom: 20px;
+  color: #ff0302;
 }
 
 #important-information li {
