--- a/style.css
+++ b/style.css
@@ -118,6 +118,12 @@ header img {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+#important-information h3 {
+  text-align: center;
+  font-size: 40px;
+  margin-bottom: 20px;
+}
+
 #important-information li {
   list-style: none;
   width: 90%;
@@ -132,10 +138,7 @@ header img {
   color: #efd400;
 }
 
-#important-information h3 {
-  text-align: center;
-  font-size: 40px;
-  margin-bottom: 20px;
+#important-information h3 strong {
   color: #ff0302;
 }
 
